--- a/public/style.css
+++ b/public/style.css
@@ -17,23 +17,37 @@ body {
   color: white;
   text-shadow: black 1px 1px 2px;
   border: 10px solid white;
-  overflow:hidden;
+  overflow: hidden;
 }
 
-.image-container {
+.background-container {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  transition: background-image 0.5s ease-in-out; /* Optional: smooth transition */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+}
+
+/* .image-container {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 85vw;
   margin: 1em;
-}
+} */
 
-.image-container img {
+/* .image-container img {
   max-height: 50vh;
   border-radius: 50px;
   border: white 5px solid;
   box-shadow: black 5px 5px 5px 5px;
-}
+} */
 
 .text-container {
   display: flex;
@@ -47,6 +61,8 @@ body {
   min-width: 50vw;
   margin: 1em;
   width: 85vw;
+  background-color: rgba(10, 129, 214, 0.7);
+  height: 25vh;
 }
 
 .text-container p {
@@ -62,7 +78,6 @@ h1 {
 }
 
 @media (max-width: 600px) {
-
   .text-container {
     width: 75vw;
   }
